...

            <android.support.v7.widget.AppCompatRadioButton
                android:onClick="rbClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_mood_select_filter"
                android:id="@+id/filter_mood_radio_button"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_mood"
...
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_weight="0.25"
                    android:layout_margin="5dp"
                    android:layout_height="60dp"
                    android:drawableTop="@drawable/ic_happy_263a"
                    android:id="@+id/happy_button"
                    android:text="@string/happy_button_label"
                    android:layout_width="wrap_content" />
                <Button
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_weight="0.25"
...
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_weight="0.25"
                    android:layout_margin="5dp"
                    android:layout_height="60dp"
                    android:drawableTop="@drawable/ic_shameful_1f612"
                    android:id="@+id/shameful_button"
                    android:text="@string/shameful_button_label"
                    android:layout_width="wrap_content" />

            </LinearLayout>

                <View
...
            <android.support.v7.widget.AppCompatRadioButton
                android:onClick="rbClick"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_trigger_select_filter"
                android:id="@+id/filter_trigger_radio_button"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
...
                    android:id="@+id/date_label" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/message" />
            </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider"
                    android:layout_marginTop="5sp"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:onClick="rbClick"
                android:layout_marginTop="15dp"
                android:id="@+id/filter_week_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:text="@string/filter_week_select_filter" />

...
            android:id="@+id/cancel" />

        <Button
            android:text="FILTER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter" />

    </LinearLayout>

</RelativeLayout>

