...
    tools:context="team21.pylonconstructor.MoodFeedActivity"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clearfilter"
        android:text="@string/clear_filter_button_label"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:id="@+id/filtered_by_label"
        android:visibility="gone"
        android:text="@string/filtered_by"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:layout_below="@id/filtered_by_label" />

...
