<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="team21.pylonconstructor.MoodFeedActivity"
    android:background="@color/colorPrimary"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="team21.pylonconstructor.MoodFeedActivity"
        android:layout_centerInParent="true"
        android:id="@+id/relativeLayout"
        android:layout_height= "fill_parent"
        android:layout_width="fill_parent">

        </RelativeLayout>


    <ImageView
        android:layout_width="130sp"
        android:layout_height="130sp"
        android:src="@drawable/ic_noun_654393_cc_white"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:fontFamily="sans-serif-condensed"
        android:text="PylonConstructor"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        android:textColor="#FFFFFF"
        android:layout_below="@id/logo"
        android:paddingTop="10sp"/>



    <TextView
        android:paddingTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:id="@+id/uname"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/userinp"
        android:layout_below="@+id/uname"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="Password"
        android:layout_below="@id/userinp"
        android:layout_centerHorizontal="true"
        android:id="@+id/pw"
        android:textColor="#FFFFFF"/>

    <EditText
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pw"
        android:layout_alignStart="@+id/userinp"
        android:id="@+id/pw_edit"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/footerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:text="REGISTER"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:id="@+id/register_user_button" />

        <Button
            android:text="LOGIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button" />
    </LinearLayout>



</RelativeLayout>